--- a/BottomSheetios/Base.lproj/Main.storyboard
+++ b/BottomSheetios/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wka-KH-So6">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,121 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BottomSheetios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U8d-5G-pSZ">
+                                <rect key="frame" x="16" y="73" width="343" height="38"/>
+                                <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="Gp5-NT-8Q5"/>
+                                    <constraint firstAttribute="width" constant="343" id="gLw-FS-gej"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
+                                <state key="normal" title="Bottom">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="showBottomSheet:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8FS-as-p9r"/>
+                                </connections>
+                            </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="EVm-Gv-PbY">
+                                <rect key="frame" x="16" y="119" width="343" height="528"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EVm-Gv-PbY" secondAttribute="bottom" constant="20" id="110-QH-vyA"/>
+                            <constraint firstItem="U8d-5G-pSZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="2WI-z7-PGM"/>
+                            <constraint firstItem="EVm-Gv-PbY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="5fU-XB-sa8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="U8d-5G-pSZ" secondAttribute="trailing" constant="16" id="DAB-vZ-cOL"/>
+                            <constraint firstItem="U8d-5G-pSZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="b4V-9l-iZm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EVm-Gv-PbY" secondAttribute="trailing" constant="16" id="eZc-mJ-tIY"/>
+                            <constraint firstItem="EVm-Gv-PbY" firstAttribute="top" secondItem="U8d-5G-pSZ" secondAttribute="bottom" constant="8" id="smU-gE-2Cb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Q69-fJ-0sI"/>
+                    <connections>
+                        <outlet property="btnBottomSheet" destination="U8d-5G-pSZ" id="zhC-q2-oyx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1056.8" y="117.39130434782609"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="QSM-Ah-hE7">
+            <objects>
+                <viewController storyboardIdentifier="detailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rHb-M1-Z6P" customClass="DetailViewController" customModule="BottomSheetios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cXQ-qr-Yy1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbo-LN-PN1" userLabel="bottomview">
+                                <rect key="frame" x="5" y="30" width="365" height="632"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Whatsup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulq-Wn-SyQ">
+                                        <rect key="frame" x="126" y="261" width="121" height="65"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="poN-VD-MsQ">
+                                        <rect key="frame" x="157" y="8" width="50" height="5"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="6fh-4Q-HsT"/>
+                                            <constraint firstAttribute="width" constant="50" id="EsS-XY-pPs"/>
+                                            <constraint firstAttribute="height" constant="5" id="teQ-yX-tjk"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="poN-VD-MsQ" firstAttribute="top" secondItem="xbo-LN-PN1" secondAttribute="top" constant="8" id="OfD-8k-P83"/>
+                                    <constraint firstItem="poN-VD-MsQ" firstAttribute="leading" secondItem="xbo-LN-PN1" secondAttribute="leading" constant="157" id="SmU-Sm-vaf"/>
+                                    <constraint firstAttribute="trailing" secondItem="poN-VD-MsQ" secondAttribute="trailing" constant="158" id="UHI-Ff-J2f"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KMM-tv-jPe" firstAttribute="trailing" secondItem="xbo-LN-PN1" secondAttribute="trailing" constant="5" id="TgB-hr-jhY"/>
+                            <constraint firstItem="KMM-tv-jPe" firstAttribute="bottom" secondItem="xbo-LN-PN1" secondAttribute="bottom" constant="5" id="jEc-pu-69g"/>
+                            <constraint firstItem="xbo-LN-PN1" firstAttribute="top" secondItem="KMM-tv-jPe" secondAttribute="top" constant="10" id="sHa-wM-QQ0"/>
+                            <constraint firstItem="xbo-LN-PN1" firstAttribute="leading" secondItem="KMM-tv-jPe" secondAttribute="leading" constant="5" id="v4D-Ph-Lx3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KMM-tv-jPe"/>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="xbo-LN-PN1" id="i3z-n5-33C"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nUV-0K-u7X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1800.8" y="93.103448275862078"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bLA-kE-tK8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wka-KH-So6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cw7-SQ-WLI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Oun-NO-LAA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IIa-Su-blU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
         </scene>
     </scenes>
 </document>
